# advent2021

./: .gitignore  CHANGELOG.md  README.md  advent2021.cabal  s1a.hs  s1b.hs
app/: s2.hs  s2a.hs  s2b.hs  s3a.hs  s3b.hs
