cabal-version:      2.4
name:               advent2021
version:            0.1.0.0

author:             Andrew Knowles
maintainer:         andrew.knowles@shopify.com

executable s1a
    main-is:          s1a.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable s1b
    main-is:          s1b.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable s2a
    main-is:          s2a.hs

    build-depends:    base ^>=4.14.3.0
                    , regex-tdfa
    hs-source-dirs:   app
    default-language: Haskell2010

executable s2b
    main-is:          s2b.hs

    build-depends:    base ^>=4.14.3.0
                    , regex-tdfa
    hs-source-dirs:   app
    default-language: Haskell2010

executable s3a
    main-is:          s3a.hs

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable s3b
    main-is:          s3b.hs

    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010